--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "autoprefixer": "^10.0.3",
     "next": "10.0.3",
     "postcss": "^8.1.10",
+    "prismic-javascript": "^3.0.2",
+    "prismic-reactjs": "^1.3.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "tailwindcss": "^2.0.1"
