--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "tailwindcss": "^2.0.1"
+  },
+  "prettier": {
+    "semi": true,
+    "singleQuote": true
   }
 }
