--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^10.0.3",
+    "date-fns": "^2.16.1",
     "next": "10.0.3",
     "postcss": "^8.1.10",
     "prismic-javascript": "^3.0.2",
