--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.3.1",
-    "autoprefixer": "^10.0.3",
+    "autoprefixer": "^10.2.0",
     "date-fns": "^2.16.1",
-    "next": "10.0.3",
-    "postcss": "^8.1.10",
+    "next": "^10.0.5",
+    "postcss": "^8.2.3",
     "prismic-javascript": "^3.0.2",
     "prismic-reactjs": "^1.3.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "tailwindcss": "^2.0.1"
+    "tailwindcss": "^2.0.2"
   },
   "prettier": {
     "semi": true,
