--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.2.0",
     "date-fns": "^2.16.1",
     "next": "^10.0.5",
+    "next-seo": "^4.17.0",
     "postcss": "^8.2.3",
     "prismic-javascript": "^3.0.2",
     "prismic-reactjs": "^1.3.3",
