--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
   "prettier": {
     "semi": true,
     "singleQuote": true
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.21",
+    "@types/react": "^17.0.0",
+    "typescript": "^4.1.3"
   }
 }
