--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^10.2.0",
     "date-fns": "^2.16.1",
+    "graphql": "^15.4.0",
+    "graphql-tag": "^2.11.0",
     "next": "^10.0.5",
     "next-seo": "^4.17.0",
     "postcss": "^8.2.3",
