--- a/package.json
+++ b/package.json
@@ -9,28 +9,28 @@
   },
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.2.0",
-    "@tailwindcss/forms": "^0.2.1",
-    "@tailwindcss/typography": "^0.3.1",
-    "autoprefixer": "^10.2.0",
-    "date-fns": "^2.16.1",
-    "graphql": "^15.4.0",
+    "@tailwindcss/forms": "^0.3.2",
+    "@tailwindcss/typography": "^0.4.0",
+    "autoprefixer": "^10.2.5",
+    "date-fns": "^2.21.1",
+    "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
-    "next": "^10.0.5",
-    "next-seo": "^4.17.0",
-    "postcss": "^8.2.3",
+    "next": "^10.1.3",
+    "next-seo": "^4.24.0",
+    "postcss": "^8.2.12",
     "prismic-javascript": "^3.0.2",
     "prismic-reactjs": "^1.3.3",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "tailwindcss": "^2.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "tailwindcss": "^2.1.2"
   },
   "prettier": {
     "semi": true,
     "singleQuote": true
   },
   "devDependencies": {
-    "@types/node": "^14.14.21",
-    "@types/react": "^17.0.0",
-    "typescript": "^4.1.3"
+    "@types/node": "^14.14.41",
+    "@types/react": "^17.0.3",
+    "typescript": "^4.2.4"
   }
 }
