--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "singleQuote": true
   },
   "devDependencies": {
+    "@types/gtag.js": "0.0.4",
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.3",
     "typescript": "^4.2.4"
