--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "date-fns": "^2.27.0",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
-    "next": "^10.2.3",
+    "gray-matter": "^4.0.3",
+    "next": "^12.0.7",
+    "next-mdx-remote": "^3.0.8",
     "next-seo": "^4.28.1",
     "postcss": "^8.4.4",
     "prismic-javascript": "^3.0.2",
