--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@splitbee/web": "^0.3.0",
@@ -34,6 +35,8 @@
   "devDependencies": {
     "@types/node": "^14.18.0",
     "@types/react": "^17.0.37",
+    "eslint": "8.4.1",
+    "eslint-config-next": "12.0.7",
     "typescript": "^4.5.2"
   }
 }
