--- a/package.json
+++ b/package.json
@@ -10,10 +10,6 @@
   },
   "dependencies": {
     "@splitbee/web": "^0.3.0",
-    "@tailwindcss/aspect-ratio": "^0.3.0",
-    "@tailwindcss/forms": "^0.3.4",
-    "@tailwindcss/typography": "^0.4.1",
-    "autoprefixer": "^10.4.0",
     "date-fns": "^2.27.0",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
@@ -21,22 +17,27 @@
     "next": "^12.0.7",
     "next-mdx-remote": "^3.0.8",
     "next-seo": "^4.28.1",
-    "postcss": "^8.4.4",
     "prismic-javascript": "^3.0.2",
     "prismic-reactjs": "^1.3.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "tailwindcss": "^2.2.19"
+    "react-dom": "^17.0.2"
   },
   "prettier": {
     "semi": true,
     "singleQuote": true
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.3.0",
+    "@tailwindcss/typography": "^0.5.0",
     "@types/node": "^14.18.0",
     "@types/react": "^17.0.37",
+    "autoprefixer": "^10.4.0",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.4",
+    "tailwindcss": "^3.0.0",
     "typescript": "^4.5.2"
   }
 }
