--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@giscus/react": "^1.0.1",
     "@splitbee/web": "^0.3.0",
     "date-fns": "^2.27.0",
     "graphql": "^15.5.0",
