--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@giscus/react": "^1.0.1",
+    "@giscus/react": "^1.1.2",
     "@splitbee/web": "^0.3.0",
-    "date-fns": "^2.27.0",
-    "graphql": "^15.5.0",
-    "graphql-tag": "^2.11.0",
+    "date-fns": "^2.28.0",
+    "graphql": "^15.8.0",
+    "graphql-tag": "^2.12.6",
     "gray-matter": "^4.0.3",
-    "next": "^12.0.7",
+    "next": "^12.1.0",
     "next-mdx-remote": "^3.0.8",
-    "next-seo": "^4.28.1",
+    "next-seo": "^4.29.0",
     "prismic-javascript": "^3.0.2",
-    "prismic-reactjs": "^1.3.3",
+    "prismic-reactjs": "^1.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -30,15 +30,17 @@
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
-    "@tailwindcss/line-clamp": "^0.3.0",
-    "@tailwindcss/typography": "^0.5.0",
-    "@types/node": "^14.18.0",
-    "@types/react": "^17.0.37",
-    "autoprefixer": "^10.4.0",
-    "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7",
-    "postcss": "^8.4.4",
-    "tailwindcss": "^3.0.0",
-    "typescript": "^4.5.2"
+    "@tailwindcss/line-clamp": "^0.3.1",
+    "@tailwindcss/typography": "^0.5.2",
+    "@types/node": "^17.0.18",
+    "@types/react": "^17.0.39",
+    "autoprefixer": "^10.4.2",
+    "eslint": "^8.9.0",
+    "eslint-config-next": "^12.1.0",
+    "i": "^0.3.7",
+    "npm": "^8.5.1",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.5.5"
   }
 }
