--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@giscus/react": "^2.2.6",
-    "@splitbee/web": "^0.3.0",
+    "@vercel/analytics": "^1.0.1",
     "date-fns": "^2.29.3",
     "graphql": "^15.8.0",
     "graphql-tag": "^2.12.6",
