--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,8 @@
-PRISMIC_API_TOKEN=your-prismic-api-token
-PRISMIC_REPOSITORY_NAME=your-prismic-repository-name
-PRISMIC_REPOSITORY_LOCALE="en-us"
+# These are retrieved from your project at app.tina.io
+NEXT_PUBLIC_TINA_CLIENT_ID=***
+TINA_TOKEN=***
+
+# This is set by default CI with Netlify/Vercel/Github, but can be overriden
+NEXT_PUBLIC_TINA_BRANCH=***
+# To see the preview functionality
+VERCEL_ENV=preview
