--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "tinacms dev -c \"next dev\"",
+    "build": "tinacms build && next build",
+    "start": "tinacms build && next start",
     "lint": "next lint",
     "format": "prettier --write ."
   },
   "dependencies": {
     "@giscus/react": "^2.2.6",
+    "@tinacms/cli": "^1.5.19",
     "@vercel/analytics": "^1.0.1",
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
@@ -18,7 +19,8 @@
     "next-mdx-remote": "^4.3.0",
     "next-seo": "^6.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tinacms": "^1.5.10"
   },
   "prettier": {
     "semi": true,
