--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@giscus/react": "^2.2.6",
+    "@t3-oss/env-nextjs": "^0.4.0",
     "@tinacms/cli": "^1.5.19",
     "@vercel/analytics": "^1.0.1",
     "date-fns": "^2.29.3",
@@ -18,7 +19,8 @@
     "next-seo": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tinacms": "^1.5.10"
+    "tinacms": "^1.5.10",
+    "zod": "^3.21.4"
   },
   "prettier": {
     "semi": true,
