--- a/.env.local.example
+++ b/.env.local.example
@@ -1,8 +1,12 @@
 # These are retrieved from your project at app.tina.io
 NEXT_PUBLIC_TINA_CLIENT_ID=***
-TINA_TOKEN=***
+NEXT_PUBLIC_TINA_TOKEN=***
 
 # This is set by default CI with Netlify/Vercel/Github, but can be overriden
 NEXT_PUBLIC_TINA_BRANCH=***
 # To see the preview functionality
 VERCEL_ENV=preview
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=<Your Cloudinary Cloud Name>
+NEXT_PUBLIC_CLOUDINARY_API_KEY=<Your Cloudinary API key>
+CLOUDINARY_API_SECRET=<Your Cloudinary API secret>
