--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@giscus/react": "^2.2.6",
     "@t3-oss/env-nextjs": "^0.4.0",
+    "@tinacms/auth": "^1.0.3",
     "@tinacms/cli": "^1.5.19",
     "@vercel/analytics": "^1.0.1",
     "date-fns": "^2.29.3",
     "next": "^13.2.0",
     "next-seo": "^6.0.0",
+    "next-tinacms-cloudinary": "^4.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tinacms": "^1.5.10",
